--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Adelso Tzep Chox | WDD 130</title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Adelso Tzep Chox | WDD 130</h1>
+        <img src="images/profile.webp" alt="Adelso Tzep Chox" width="200">
+        <p>My name is Adelso, and I'm a student of software development at BYU Pathway Worldwide. Originally from
+            Guatemala City, I
+            am a member of The Church of Jesus Christ of Latter-day Saints. I served a mission in Brazil Salvador, which
+            helped me
+            become fluent in three languages: Spanish, Portuguese, and English. In my free time, when I'm not focused on
+            my studies
+            or my son, I love to watch movies, ten to music, and cheer on my favorite soccer teams.
+        </p>
+    </main>
+    <footer>
+        <p>&copy;2025 🇬🇹 Adelso Tzep Chox 🇬🇹 Guatemala City</p>
+    </footer>
 </body>
+
 </html>
