--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>placeholder</title>
+    <title>Basic HTML Structure</title>
+    <meta name="description" content="A basic HTML structure example using semantic HTML elements">
+    <meta name="author" content="Adelso Tzep Chox">
 </head>
+
 <body>
-    
+    <header>
+        <img src="images/basic-logo.png" alt="HTML Layout Logo" width="128" height="128">
+    </header>
+    <nav>
+        <ul>
+            <li><a href="https://byui.edu">BYU-Idaho</a></li>
+            <li><a href="https://churchofjesuschrist.org">The Church</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h1> Basic HTML Structure</h1>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia esse earum consequuntur eius accusamus
+                placeat sit quos quibusdam cupiditate natus provident odit iure, dolor fuga inventore quidem, rem
+                maiores. Culpa.</p>
+        </section>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ipsum provident obcaecati quisquam nam
+                earum sapiente, nisi iusto placeat, perferendis veritatis laborum numquam aspernatur soluta iste,
+                laudantium architecto praesentium nemo!</p>
+        </section>
+    </main>
+    <aside>
+        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/payson-utah/800x500/payson-utah-temple-celestial-room-1458545.jpg"
+            alt="Payson Utah Temple Celestial Room" width="200">
+    </aside>
+    <footer>
+        <p> Adelso Tzep Chox</p>
 </body>
+
 </html>
