adding commit once mroe

--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -25,7 +25,7 @@
             <h2>Heading</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia esse earum consequuntur eius accusamus
                 placeat sit quos quibusdam cupiditate natus provident odit iure, dolor fuga inventore quidem, rem
-                maiores. Culpa.</p>
+                maiores. Culpa...</p>
         </section>
         <section>
             <h2>Heading</h2>
