Added CSS to main page.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="styles/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adelso Tzep Chox | WDD 130</title>
+    <meta name="description" content="This website is created for learning purposes, showcasing skills in HTML and CSS. This project is a demonstration of web development fundamentals.">
+    <meta name="author" content="Adelso Tzep Chox"> 
+    <link rel="stylesheet" href="styles/styles.css">
+
 </head>
 
 <body>
@@ -25,6 +28,11 @@
             my favorite soccer teams.
         </p>
     </main>
+    <aside>
+        <h2>Guatemala</h2>
+        <img src="images/Tikal - Guatemala.webp" alt="Tikal Guatemala">
+        <p>Located in the heart of Guatemala's jungle, Tikal is one of the largest and most significant archaeological sites of the ancient Maya civilization. It was a major urban and ceremonial center from the 6th century B.C. to the 10th century A.D. The site is a UNESCO World Heritage Site, celebrated for its impressive temples, pyramids, and palaces.</p>
+    </aside>
     <footer>
         <p>&copy;2025 🇬🇹 Adelso Tzep Chox 🇬🇹 Guatemala City</p>
     </footer>
