Changes applied into CSS

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </main>
     <aside>
         <h2>Guatemala</h2>
-        <img src="images/Tikal - Guatemala.webp" alt="Tikal Guatemala">
+        <img src="images/tikal-guatemala.webp" alt="Tikal Guatemala">
         <p>Located in the heart of Guatemala's jungle, Tikal is one of the largest and most significant archaeological sites of the ancient Maya civilization. It was a major urban and ceremonial center from the 6th century B.C. to the 10th century A.D. The site is a UNESCO World Heritage Site, celebrated for its impressive temples, pyramids, and palaces.</p>
     </aside>
     <footer>
