--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adelso Tzep Chox | WDD 130</title>
-    <meta name="description" content="This website is created for learning purposes, showcasing skills in HTML and CSS. This project is a demonstration of web development fundamentals.">
-    <meta name="author" content="Adelso Tzep Chox"> 
+    <meta name="description"
+        content="This website is created for learning purposes, showcasing skills in HTML and CSS. This project is a demonstration of web development fundamentals.">
+    <meta name="author" content="Adelso Tzep Chox">
     <link rel="stylesheet" href="styles/styles.css">
 
 </head>
@@ -16,22 +17,49 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="https://www.linkedin.com/in/adelso-tzep-49a871256/" target="_blank">My LinkedIn Profile</a>
+            <a href="https://facebook.com" target="_blank">Facebook</a>
         </nav>
     </header>
     <main>
         <h1>Adelso Tzep Chox | WDD 130</h1>
         <img src="images/profile.webp" alt="Adelso Tzep Chox" width="200">
-        <p>My name is Adelso, and I'm a student of software development at BYU Pathway Worldwide. Originally from
-            Guatemala City, I am a member of The Church of Jesus Christ of Latter-day Saints. I served a mission in
-            Brazil Salvador, which helped me become fluent in three languages: Spanish, Portuguese, and English. In my
-            free time, when I'm not focused on my studies or my son, I love to watch movies, ten to music, and cheer on
-            my favorite soccer teams.
+        <p>I'm Adelso, a passionate and dedicated software development student at BYU Pathway Worldwide. Originally from
+            Guatemala
+            City, I've developed a unique blend of technical and interpersonal skills. My mission in Brazil Salvador was
+            a
+            transformative experience, allowing me to become fluent in three languages: Spanish, Portuguese, and
+            English. This
+            linguistic versatility has taught me how to quickly learn new concepts and effectively communicate with
+            diverse teams.
+
+            My journey into software development is driven by a desire to build practical, impactful solutions. While my
+            studies and
+            family—especially my son—are my main focus, I also make time for my other passions. You can often find me
+            watching
+            movies, listening to music, or cheering on my favorite soccer teams.
+
+            This portfolio is a reflection of my commitment and growth as a developer. I'm excited to share my projects
+            and continue
+            building a career in this dynamic field.
+
         </p>
+        <ul class="box">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/campinas-brazil-temple?lang=eng"
+                    target="_blank">Campinas Brazil Temple</a> </li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/quetzaltenango-guatemala-temple?lang=eng"
+                    target="_blank">Quetzaltenango Guatemala Temple</a> </li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/guatemala-city-guatemala-temple?lang=eng"
+                    target="_blank">Guatemala City Guatemala Temple</a> </li>
+        </ul>
     </main>
-    <aside>
+    <aside class="box">
         <h2>Guatemala</h2>
         <img src="images/tikal-guatemala.webp" alt="Tikal Guatemala">
-        <p>Located in the heart of Guatemala's jungle, Tikal is one of the largest and most significant archaeological sites of the ancient Maya civilization. It was a major urban and ceremonial center from the 6th century B.C. to the 10th century A.D. The site is a UNESCO World Heritage Site, celebrated for its impressive temples, pyramids, and palaces.</p>
+        <p>Located in the heart of Guatemala's jungle, Tikal is one of the largest and most significant archaeological
+            sites of the ancient Maya civilization. It was a major urban and ceremonial center from the 6th century B.C.
+            to the 10th century A.D. The site is a UNESCO World Heritage Site, celebrated for its impressive temples,
+            pyramids, and palaces.</p>
     </aside>
     <footer>
         <p>&copy;2025 🇬🇹 Adelso Tzep Chox 🇬🇹 Guatemala City</p>
