--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Learn about our white water rafting company's history, mission, and the exciting adventures that await you.">
+        content="Learn about our Canyon Rapids company's history, mission, and the exciting adventures that await you.">
     <meta name="author" content="Adelso Tzep Chox">
-    <title> About Us - White Water Rafting </title>
+    <title> About Us - Canyon Rapids </title>
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
