applied changes to CSS

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -52,19 +52,47 @@
 
         <section>
             <h2>History</h2>
-            <p>The story of Canyon Rapids began with a dream. Our founder, a lifelong river guide, was captivated by the
-                unparalleled
-                beauty of this canyon and knew it had to be shared. Starting with a single raft, we built our reputation
-                one trip at a
-                time, based on the trust and excitement of our very first customers. Today, our company has grown, but
-                our mission
-                remains the same: to share our passion for the river by providing safe, unforgettable adventures to
-                every person who
-                joins us.</p>
+            <div class="history-content">
+                <p>The story of Canyon Rapids began with a dream. Our founder, a lifelong river guide, was captivated by
+                    the unparalleled beauty of this canyon and knew it had to be shared. Starting with a single raft, we
+                    built our reputation one trip at a time, based on the trust and excitement of our very first
+                    customers. Today, our company has grown, but our mission remains the same: to share our passion for
+                    the river by providing safe, unforgettable adventures to every person who joins us.</p>
+                <div class="history-image-container">
+                    <img src="images/history_rafting.webp" alt="Rafters going down rapids">
+                </div>
+                <p>The story of Canyon Rapids began with a dream. Our founder, a lifelong river guide, was captivated by
+                    the unparalleled beauty of this canyon and knew it had to be shared. Starting with a single raft, we
+                    built our reputation one trip at a time, based on the trust and excitement of our very first
+                    customers. Today, our company has grown, but our mission remains the same: to share our passion for
+                    the river by providing safe, unforgettable adventures to every person who joins us.</p>
+            </div>
         </section>
 
-        <section>
+        <section class="adventures">
             <h2>Adventure Awaits You!</h2>
+            <div class="adventure-gallery">
+                <figure>
+                    <img src="images/adventure1.webp" alt="Rafters going down rapids">
+                    <figcaption>Riding the Rapids</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure2.webp" alt="Group of people on a raft">
+                    <figcaption>Teamwork and Fun</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure3.webp" alt="Rafting through a canyon">
+                    <figcaption>River's Edge Thrill</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure4.webp" alt="Two rafters high-fiving">
+                    <figcaption>Morning Glory</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure5.webp" alt="Rafters going through a small rapid">
+                    <figcaption>Making a Splash!</figcaption>
+                </figure>
+            </div>
         </section>
     </main>
 
