--- a/wwr/about.html
+++ b/wwr/about.html
@@ -53,19 +53,27 @@
         <section>
             <h2>History</h2>
             <div class="history-content">
-                <p>The story of Canyon Rapids began with a dream. Our founder, a lifelong river guide, was captivated by
-                    the unparalleled beauty of this canyon and knew it had to be shared. Starting with a single raft, we
-                    built our reputation one trip at a time, based on the trust and excitement of our very first
-                    customers. Today, our company has grown, but our mission remains the same: to share our passion for
-                    the river by providing safe, unforgettable adventures to every person who joins us.</p>
+                <p>The story of Canyon Rapids began with a singular moment of clarity for our founder, a lifelong river
+                    guide. Captivated
+                    by the canyon's untamed spirit, he saw more than just a place; he saw a powerful experience that had
+                    to be shared. With
+                    a single raft and a promise to prioritize safety and respect for nature, he began building our
+                    company's reputation one
+                    trip at a time. In those early days, our success was built on the excitement and trust of our very
+                    first customers, who
+                    became our biggest advocates and helped us grow organically.</p>
                 <div class="history-image-container">
                     <img src="images/history_rafting.webp" alt="Rafters going down rapids">
                 </div>
-                <p>The story of Canyon Rapids began with a dream. Our founder, a lifelong river guide, was captivated by
-                    the unparalleled beauty of this canyon and knew it had to be shared. Starting with a single raft, we
-                    built our reputation one trip at a time, based on the trust and excitement of our very first
-                    customers. Today, our company has grown, but our mission remains the same: to share our passion for
-                    the river by providing safe, unforgettable adventures to every person who joins us.</p>
+                <p>As our company has expanded, our mission has never wavered. We've grown from that one raft to a
+                    dedicated team of
+                    passionate and highly trained guides, all driven by the same purpose: to provide safe, unforgettable
+                    adventures to every
+                    person who joins us. We believe that a trip down the river is more than just a ride—it's an
+                    opportunity to forge
+                    powerful memories and build camaraderie. From the moment you put your paddle in the water, you're
+                    not just a customer;
+                    you're a part of the Canyon Rapids family.</p>
             </div>
         </section>
 
