changes applied to CSS

--- a/week05/contact.html
+++ b/week05/contact.html
@@ -7,8 +7,8 @@
     <meta name="description"
         content="Learn about our Canyon Rapids company's history, mission, and the exciting adventures that await you.">
     <meta name="author" content="Adelso Tzep Chox">
-    <title> About Us Canyon Rapids </title>
-    <link rel="stylesheet" href="/wwr/styles/rafting.css">
+    <title> About Us - Canyon Rapids </title>
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
@@ -105,8 +105,7 @@
     </main>
 
     <footer>
-        <p class=" copyright">© 2025 - Canyon Rapids - Adelso Tzep Chox</p>
-
+        <p>© 2025 - Canyon Rapids - Adelso Tzep Chox</p>
         <nav class="socialmedia">
             <a href="https://facebook.com">
                 <img src="images/facebook_icon.jpg" alt="Facebook Icon">
