--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Learn about our Canyon Rapids company's history, mission, and the exciting adventures that await you.">
+        content="Contact Canyon Rapids for reservation questions, general inquiries, or website suggestions. Get in touch with our team today!">
     <meta name="author" content="Adelso Tzep Chox">
-    <title> About Us - Canyon Rapids </title>
-    <link rel="stylesheet" href="styles/rafting.css">
+    <title>Canyon Rapids | Contact Us</title>
+    <link rel="stylesheet" href="/wwr/styles/rafting.css">
 </head>
 
 <body>
     <header>
         <a href="index.html" id="logo_link">
-            <img class="logo" src="images/logo.jpeg" alt="Rafting Site Logo">
+            <img class="logo" src="/wwr/images/logo.jpeg" alt="Rafting Site Logo">
         </a>
         <nav>
             <ul>
@@ -27,94 +27,112 @@
     </header>
 
     <main>
-        <div class="hero">
-            <img class="hero-image" src="images/hero_image.webp"
-                alt="People on a blue raft paddles through turbulent rapids.">
-            <h1 class="hero-title">Canyon Rapids</h1>
-            <article>
-                <img class="article-image" src="images/rafting_happy_client.webp"
-                    alt="Happy client enjoying a rafting trip">
-                <p> At Canyon Rapids, we believe in the power of the river to transform and connect people. More than
-                    just a rafting
-                    company, we are a team of passionate and highly trained guides dedicated to sharing the thrill and
-                    beauty of the canyon.
-                    Our mission is to provide you with a safe, unforgettable journey, whether you're a family looking
-                    for a gentle float or
-                    an adrenaline junkie chasing a wild ride. We want to help you disconnect from the everyday routine
-                    and fully immerse
-                    yourself in the natural world, forging powerful memories and a sense of camaraderie that will last
-                    long after the last
-                    rapid. From the moment you put your paddle in the water, you're not just a customer; you're a part
-                    of the Canyon Rapids
-                    family.</p>
-            </article>
+        <section class="company-info">
+            <h1>Canyon Rapids Rafting Company</h1>
+            <address>
+                Solola<br>
+                Guatemala City<br>
+                +502 58745898<br>
+                info@canyonrapids.com
+            </address>
+        </section>
+
+        <div class="contact-grid">
+            <div class="map">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15445.172839848774!2d-90.517025941833!3d14.582361057598922!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8589a180655c3345%3A0x4a72c7815b867b25!2sGuatemala%20City!5e0!3m2!1sen!2sgt!4v1759368302586!5m2!1sen!2sgt"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+
+            <div class="form-wrapper">
+                <form action="/submit-form" method="post">
+
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" placeholder="Placeholder" required><br>
+
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="Placeholder" required><br>
+
+                    <p>Message Purpose</p>
+
+                    <div class="radio-group">
+                        <label for="general" class="radio-option">
+                            <input type="radio" id="general" name="purpose" value="general" checked>
+                            General Inquiry
+                        </label>
+                        <label for="reservation" class="radio-option">
+                            <input type="radio" id="reservation" name="purpose" value="reservation">
+                            Reservation Question
+                        </label>
+                        <label for="website" class="radio-option">
+                            <input type="radio" id="website" name="purpose" value="website">
+                            Website Suggestion
+                        </label>
+                    </div>
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message" rows="5" placeholder="Type here"></textarea><br>
+
+                    <input type="checkbox" id="newsletter" name="newsletter" checked>
+                    <label for="newsletter">Please Subscribe me to the monthly newsletter</label><br>
+
+                    <button type="submit">Get in Touch!</button>
+
+                </form>
+            </div>
         </div>
+        <section class="employee-profiles">
+            <h2>We Are Here to Serve You</h2>
 
-        <section>
-            <h2>History</h2>
-            <div class="history-content">
-                <p>The story of Canyon Rapids began with a singular moment of clarity for our founder, a lifelong river
-                    guide. Captivated
-                    by the canyon's untamed spirit, he saw more than just a place; he saw a powerful experience that had
-                    to be shared. With
-                    a single raft and a promise to prioritize safety and respect for nature, he began building our
-                    company's reputation one
-                    trip at a time. In those early days, our success was built on the excitement and trust of our very
-                    first customers, who
-                    became our biggest advocates and helped us grow organically.</p>
-                <div class="history-image-container">
-                    <img src="images/history_rafting.webp" alt="Rafters going down rapids">
-                </div>
-                <p>As our company has expanded, our mission has never wavered. We've grown from that one raft to a
-                    dedicated team of
-                    passionate and highly trained guides, all driven by the same purpose: to provide safe, unforgettable
-                    adventures to every
-                    person who joins us. We believe that a trip down the river is more than just a ride—it's an
-                    opportunity to forge
-                    powerful memories and build camaraderie. From the moment you put your paddle in the water, you're
-                    not just a customer;
-                    you're a part of the Canyon Rapids family.</p>
+            <div class="profile-cards">
+
+                <article class="profile-card">
+                    <div class="profile-image-container">
+                        <img src="/wwr/images/ricardo.webp" alt="Photo of Ricardo 'Rico' Flores">
+                    </div>
+                    <h3>Ricardo "Rico" Flores</h3>
+                    <p class="job-title">Capitán de Guías (Head Guide)</p>
+                    <p class="bio">With 15 seasons on this river, Rico knows every curve and rapid. He ensures every
+                        trip is high-energy, safe, and truly an authentic river experience.</p>
+                </article>
+
+                <article class="profile-card">
+                    <div class="profile-image-container">
+                        <img src="/wwr/images/carmen.webp" alt="Photo of Carmen Soto">
+                    </div>
+                    <h3>Carmen Soto</h3>
+                    <p class="job-title">Coordinadora de Experiencias (Guest Coordinator)</p>
+                    <p class="bio">Carmen is the heart of the team. From the first phone call to the final high-five,
+                        she makes sure your adventure is perfectly organized and full of Latin hospitality.</p>
+                </article>
+
+                <article class="profile-card">
+                    <div class="profile-image-container">
+                        <img src="/wwr/images/javier.webp" alt="Photo of Javier Cruz">
+                    </div>
+                    <h3>Javier Cruz</h3>
+                    <p class="job-title">Logística y Equipo (Logistics & Gear Master)</p>
+                    <p class="bio">Javier is the gear guru. A local from the nearby community, he keeps our equipment in
+                        pristine condition and is our leading voice for river conservation.</p>
+                </article>
+
             </div>
         </section>
 
-        <section class="adventures">
-            <h2>Adventure Awaits You!</h2>
-            <div class="adventure-gallery">
-                <figure>
-                    <img src="images/adventure1.webp" alt="Rafters going down rapids">
-                    <figcaption>Riding the Rapids</figcaption>
-                </figure>
-                <figure>
-                    <img src="images/adventure2.webp" alt="Group of people on a raft">
-                    <figcaption>Teamwork and Fun</figcaption>
-                </figure>
-                <figure>
-                    <img src="images/adventure3.webp" alt="Rafting through a canyon">
-                    <figcaption>River's Edge Thrill</figcaption>
-                </figure>
-                <figure>
-                    <img src="images/adventure4.webp" alt="Two rafters high-fiving">
-                    <figcaption>Morning Glory</figcaption>
-                </figure>
-                <figure>
-                    <img src="images/adventure5.webp" alt="Rafters going through a small rapid">
-                    <figcaption>Making a Splash!</figcaption>
-                </figure>
-            </div>
-        </section>
     </main>
 
     <footer>
-        <p>© 2025 - Canyon Rapids - Adelso Tzep Chox</p>
+        <p class=" copyright">© 2025 - Canyon Rapids - Adelso Tzep Chox</p>
+
         <nav class="socialmedia">
             <a href="https://facebook.com">
-                <img src="images/facebook_icon.jpg" alt="Facebook Icon">
+                <img src="/wwr/images/facebook_icon.jpg" alt="Facebook Icon">
             </a>
             <a href="https://linkedin.com">
-                <img src="images/linkedin_icon.png" alt="LinkedIn Icon">
+                <img src="/wwr/images/linkedin_icon.png" alt="LinkedIn Icon">
             </a>
             <a href="https://instagram.com">
-                <img src="images/instagram_icon.jpg" alt="Instagram Icon">
+                <img src="/wwr/images/instagram_icon.jpg" alt="Instagram Icon">
             </a>
         </nav>
     </footer>
