path files applied to HTML and CSS.

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -8,7 +8,7 @@
         content="Contact Canyon Rapids for reservation questions, general inquiries, or website suggestions. Get in touch with our team today!">
     <meta name="author" content="Adelso Tzep Chox">
     <title>Canyon Rapids | Contact Us</title>
-    <link rel="stylesheet" href="/wwr/styles/rafting.css">
+    <link rel="stylesheet" href="/styles/rafting.css">
 </head>
 
 <body>
