--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <a href="index.html" id="logo_link">
-            <img class="logo" src="/wwr/images/logo.jpeg" alt="Rafting Site Logo">
+            <img class="logo" src="/images/logo.jpeg" alt="Rafting Site Logo">
         </a>
         <nav>
             <ul>
