--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -88,7 +88,7 @@
 
                 <article class="profile-card">
                     <div class="profile-image-container">
-                        <img src="/wwr/images/ricardo.webp" alt="Photo of Ricardo 'Rico' Flores">
+                        <img src="../wwr/images/ricardo.webp" alt="Photo of Ricardo 'Rico' Flores">
                     </div>
                     <h3>Ricardo "Rico" Flores</h3>
                     <p class="job-title">Capitán de Guías (Head Guide)</p>
