path images applied.

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -98,7 +98,7 @@
 
                 <article class="profile-card">
                     <div class="profile-image-container">
-                        <img src="/wwr/images/carmen.webp" alt="Photo of Carmen Soto">
+                        <img src="../wwr/images/carmen.webp" alt="Photo of Carmen Soto">
                     </div>
                     <h3>Carmen Soto</h3>
                     <p class="job-title">Coordinadora de Experiencias (Guest Coordinator)</p>
@@ -108,7 +108,7 @@
 
                 <article class="profile-card">
                     <div class="profile-image-container">
-                        <img src="/wwr/images/javier.webp" alt="Photo of Javier Cruz">
+                        <img src="../wwr/images/javier.webp" alt="Photo of Javier Cruz">
                     </div>
                     <h3>Javier Cruz</h3>
                     <p class="job-title">Logística y Equipo (Logistics & Gear Master)</p>
@@ -126,13 +126,13 @@
 
         <nav class="socialmedia">
             <a href="https://facebook.com">
-                <img src="/wwr/images/facebook_icon.jpg" alt="Facebook Icon">
+                <img src="../wwr/images/facebook_icon.jpg" alt="Facebook Icon">
             </a>
             <a href="https://linkedin.com">
-                <img src="/wwr/images/linkedin_icon.png" alt="LinkedIn Icon">
+                <img src="../wwr/images/linkedin_icon.png" alt="LinkedIn Icon">
             </a>
             <a href="https://instagram.com">
-                <img src="/wwr/images/instagram_icon.jpg" alt="Instagram Icon">
+                <img src="../wwr/images/instagram_icon.jpg" alt="Instagram Icon">
             </a>
         </nav>
     </footer>
