changes applied to CSS

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -8,7 +8,7 @@
         content="Learn about our Canyon Rapids company's history, mission, and the exciting adventures that await you.">
     <meta name="author" content="Adelso Tzep Chox">
     <title> About Us Canyon Rapids </title>
-    <link rel="stylesheet" href="/styles/rafting.css">
+    <link rel="stylesheet" href="../styles/rafting.css">
 </head>
 
 <body>
