multiple changes applied to CSS

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -28,11 +28,11 @@
 
     <main>
         <div class="hero">
-            <img class="hero-image" src="images/hero_image.webp"
+            <img class="hero-image" src="images/hero-image.webp"
                 alt="People on a blue raft paddles through turbulent rapids.">
             <h1 class="hero-title">Canyon Rapids</h1>
             <article>
-                <img class="article-image" src="images/rafting_happy_client.webp"
+                <img class="article-image" src="images/rafting-happy-client.webp"
                     alt="Happy client enjoying a rafting trip">
                 <p> At Canyon Rapids, we believe in the power of the river to transform and connect people. More than
                     just a rafting
@@ -63,7 +63,7 @@
                     first customers, who
                     became our biggest advocates and helped us grow organically.</p>
                 <div class="history-image-container">
-                    <img src="images/history_rafting.webp" alt="Rafters going down rapids">
+                    <img src="images/history-rafting.webp" alt="Rafters going down rapids">
                 </div>
                 <p>As our company has expanded, our mission has never wavered. We've grown from that one raft to a
                     dedicated team of
@@ -109,13 +109,13 @@
 
         <nav class="socialmedia">
             <a href="https://facebook.com">
-                <img src="images/facebook_icon.jpg" alt="Facebook Icon">
+                <img src="images/facebook-icon.jpg" alt="Facebook Icon">
             </a>
             <a href="https://linkedin.com">
-                <img src="images/linkedin_icon.png" alt="LinkedIn Icon">
+                <img src="images/linkedin-icon.png" alt="LinkedIn Icon">
             </a>
             <a href="https://instagram.com">
-                <img src="images/instagram_icon.jpg" alt="Instagram Icon">
+                <img src="images/instagram-icon.jpg" alt="Instagram Icon">
             </a>
         </nav>
     </footer>
