--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -126,13 +126,13 @@
 
         <nav class="socialmedia">
             <a href="https://facebook.com">
-                <img src="../wwr/images/facebook_icon.jpg" alt="Facebook Icon">
+                <img src="images/facebook-icon.jpg" alt="Facebook Icon">
             </a>
             <a href="https://linkedin.com">
-                <img src="../wwr/images/linkedin_icon.png" alt="LinkedIn Icon">
+                <img src="images/linkedin-icon.png" alt="LinkedIn Icon">
             </a>
             <a href="https://instagram.com">
-                <img src="../wwr/images/instagram_icon.jpg" alt="Instagram Icon">
+                <img src="images/instagram-icon.jpg" alt="Instagram Icon">
             </a>
         </nav>
     </footer>
