--- a/wwr/contact1.html
+++ b/wwr/contact1.html
@@ -2,121 +2,48 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Learn about our Canyon Rapids company's history, mission, and the exciting adventures that await you.">
-    <meta name="author" content="Adelso Tzep Chox">
-    <title> About Us - Canyon Rapids </title>
-    <link rel="stylesheet" href="styles/rafting.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>WDD130 Home Page</title>
+    <meta name="description" content="WDD130 Home Page for Vern Wolfley's Web Projects." />
+    <meta name="author" content="Vern Wolfley" />
+    <meta name="theme-color" content="#006EB6" />
+
+    <link rel="stylesheet" href="styles/testintout.css" />
 </head>
 
 <body>
     <header>
-        <a href="index.html" id="logo_link">
-            <img class="logo" src="images/logo.jpeg" alt="Rafting Site Logo">
-        </a>
+        <h1>Welcome to WDD130 Web Projects</h1>
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="trips.html">Trips</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
+            <a href="./aboutme/index.html" target="_blank">About Me Page</a>
+            <a href="./wwr/index.html" target="_blank">White Water Rafting Website</a>
+            <a href="./wwr/site-plan-rafting.html" target="_blank">White Water Rafting Siteplan</a>
+            <a href="./positioning/positioning.html" target="_blank">Positioning Activity</a>
+            <a href="./knights-football/index.html" target="_blank">Personal Website</a>
+            <a href="./knights-football/pages/site-plan.html" target="_blank">Personal Siteplan</a>
         </nav>
     </header>
 
     <main>
-        <div class="hero">
-            <img class="hero-image" src="images/hero_image.webp"
-                alt="People on a blue raft paddles through turbulent rapids.">
-            <h1 class="hero-title">Canyon Rapids</h1>
-            <article>
-                <img class="article-image" src="images/rafting_happy_client.webp"
-                    alt="Happy client enjoying a rafting trip">
-                <p> At Canyon Rapids, we believe in the power of the river to transform and connect people. More than
-                    just a rafting
-                    company, we are a team of passionate and highly trained guides dedicated to sharing the thrill and
-                    beauty of the canyon.
-                    Our mission is to provide you with a safe, unforgettable journey, whether you're a family looking
-                    for a gentle float or
-                    an adrenaline junkie chasing a wild ride. We want to help you disconnect from the everyday routine
-                    and fully immerse
-                    yourself in the natural world, forging powerful memories and a sense of camaraderie that will last
-                    long after the last
-                    rapid. From the moment you put your paddle in the water, you're not just a customer; you're a part
-                    of the Canyon Rapids
-                    family.</p>
-            </article>
-        </div>
-
-        <section>
-            <h2>History</h2>
-            <div class="history-content">
-                <p>The story of Canyon Rapids began with a singular moment of clarity for our founder, a lifelong river
-                    guide. Captivated
-                    by the canyon's untamed spirit, he saw more than just a place; he saw a powerful experience that had
-                    to be shared. With
-                    a single raft and a promise to prioritize safety and respect for nature, he began building our
-                    company's reputation one
-                    trip at a time. In those early days, our success was built on the excitement and trust of our very
-                    first customers, who
-                    became our biggest advocates and helped us grow organically.</p>
-                <div class="history-image-container">
-                    <img src="images/history_rafting.webp" alt="Rafters going down rapids">
-                </div>
-                <p>As our company has expanded, our mission has never wavered. We've grown from that one raft to a
-                    dedicated team of
-                    passionate and highly trained guides, all driven by the same purpose: to provide safe, unforgettable
-                    adventures to every
-                    person who joins us. We believe that a trip down the river is more than just a ride—it's an
-                    opportunity to forge
-                    powerful memories and build camaraderie. From the moment you put your paddle in the water, you're
-                    not just a customer;
-                    you're a part of the Canyon Rapids family.</p>
-            </div>
-        </section>
-
-        <section class="adventures">
-            <h2>Adventure Awaits You!</h2>
-            <div class="adventure-gallery">
-                <figure>
-                    <img src="images/adventure1.webp" alt="Rafters going down rapids">
-                    <figcaption>Riding the Rapids</figcaption>
-                </figure>
-                <figure>
-                    <img src="images/adventure2.webp" alt="Group of people on a raft">
-                    <figcaption>Teamwork and Fun</figcaption>
-                </figure>
-                <figure>
-                    <img src="images/adventure3.webp" alt="Rafting through a canyon">
-                    <figcaption>River's Edge Thrill</figcaption>
-                </figure>
-                <figure>
-                    <img src="images/adventure4.webp" alt="Two rafters high-fiving">
-                    <figcaption>Morning Glory</figcaption>
-                </figure>
-                <figure>
-                    <img src="images/adventure5.webp" alt="Rafters going through a small rapid">
-                    <figcaption>Making a Splash!</figcaption>
-                </figure>
-            </div>
-        </section>
+        <h2 class="attribute">Vern Wolfley - WDD130-A1</h2>
     </main>
 
     <footer>
-        <p>© 2025 - Canyon Rapids - Adelso Tzep Chox</p>
-        <nav class="socialmedia">
-            <a href="https://facebook.com">
-                <img src="images/facebook_icon.jpg" alt="Facebook Icon">
+        <p>wdd-130-a1 &copy; 2023 - Vern Wolfley</p>
+
+        <div class="social">
+            <a href="https://www.linkedin.com/in/vern-wolfley-b8322813/" target="_blank">
+                <img src="images/linkedin-logo.png" alt="instagram icon" />
             </a>
-            <a href="https://linkedin.com">
-                <img src="images/linkedin_icon.png" alt="LinkedIn Icon">
+            <a href="https://twitter.com/WolfleyVern" target="_blank">
+                <img src="images/twitter-x-logo.png" alt="twitter icon" />
             </a>
-            <a href="https://instagram.com">
-                <img src="images/instagram_icon.jpg" alt="Instagram Icon">
+            <a href="https://www.facebook.com/vwolfley" target="_blank">
+                <img src="images/facebook-logo.png" alt="fb icon" />
             </a>
-        </nav>
+        </div>
     </footer>
 </body>
 
