changes applied to CSS to fix warning errors from validator.

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -32,8 +32,8 @@
                 alt="People on a blue raft paddles through turbulent rapids.">
             <h1 class="hero-title">Canyon Rapids</h1>
             <article>
-                <img class="article-image" src="images/rafting-happy-client.webp"
-                    alt="Happy client enjoying a rafting trip">
+                <h2 class="visually-hidden">Our Company Story</h2> <img class="article-image"
+                    src="images/rafting-happy-client.webp" alt="Happy client enjoying a rafting trip">
                 <p> At Canyon Rapids, we believe in the power of the river to transform and connect people. More than
                     just a rafting
                     company, we are a team of passionate and highly trained guides dedicated to sharing the thrill and
